# recsys_factory

./: ChatGPT-推荐算法与数据集.md  README.md  pyproject.toml
configs/: criteo_fm.yaml  ml100k_itemcf_bpr.yaml  toy_ctr_fm.yaml  toy_ctr_gbdt_lr.yaml  toy_ctr_lsplm.yaml
scripts/: download_ml100k.sh  gen_toy_ctr.py  run_criteo_fm.sh  run_ml100k_itemcf_bpr.sh  run_ml100k_usercf_als.sh  run_toy_ctr_fm.sh  run_toy_ctr_gbdt_lr.sh  run_toy_ctr_lsplm.sh
src/recsys_factory/: __init__.py  config.py  log.py
src/recsys_factory/ann/: __init__.py  faiss_like.py
src/recsys_factory/cli/: train.py
src/recsys_factory/data/: __init__.py  base.py  ctr.py  ctr_base.py  movielens.py  splits.py
src/recsys_factory/evaluator/: __init__.py  offline.py
src/recsys_factory/factory/: __init__.py  registry.py
src/recsys_factory/features/: __init__.py  cooccurrence.py  encoders.py  gbdt_leaf.py  poly.py  tfidf.py
src/recsys_factory/metrics/: __init__.py  classification.py  ranking.py
src/recsys_factory/models/: __init__.py  als.py  base.py  bpr.py  ctr_base.py  ffm.py  fm.py  gbdt_lr.py  itemcf.py  lr.py  ls_plm.py  poly2.py  usercf.py
src/recsys_factory/stages/: __init__.py  rank.py  recall.py  rerank.py
src/recsys_factory/trainer/: __init__.py  ctr_offline.py  offline.py
src/recsys_factory/utils/: sparse.py
